# uniffi-bindgen-cs

bindgen/: Cargo.toml
bindgen/src/gen_cs/: mod.rs
bindgen/templates/: ObjectTemplate.cs
